--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.10.2",
     "@mui/styles": "^5.10.2",
+    "dom-to-image": "^2.6.0",
+    "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
